# cli-calculator

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py
app/calculation/: __init__.py  calculation.py  factory.py
app/calculator/: __init__.py  cli.py
app/operation/: __init__.py  ops.py
cli_calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calculations.py  test_cli.py  test_operations.py
