# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-calculator"
version = "0.1.0"
description = "A modular CLI calculator with tests and CI."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
